# superjet4663.github.io

./: .cbfmt.toml  .clang-format  .gitattributes  .gitmodules  .markdownlint.yaml  .marksman.toml  .moxide.toml  .prettierignore  flake.nix  globals.d.ts  go.mod  go.sum  index.d.ts  manim.cfg  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  publish-generated.sh  pyproject.toml  quartz.config.ts  quartz.layout.ts  server.go  vercel.json  wrangler.toml
.github/: PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yaml  deploy.yaml  docker-build-push.yaml
@types/@citation-js/core/: index.d.ts
api/: arxiv.ts  curius.ts  file.ts  index.d.ts
functions/: _middleware.js
quartz/: bootstrap-cli.mjs  build.ts  cfg.ts
quartz/cli/: args.js  handlers.js  helpers.js
quartz/components/: ArticleTitle.tsx  Backlinks.tsx  Breadcrumbs.tsx  Byline.tsx  Comments.tsx  ContentMeta.tsx  Darkmode.tsx  Evergreen.tsx  ExplorerNode.tsx  Footer.tsx  Graph.tsx  Head.tsx  Header.tsx  Image.tsx  Keybind.tsx  Navigation.tsx  OverflowList.tsx  PageList.tsx  PageTitle.tsx  Palette.tsx  Reader.tsx  RecentNotes.tsx  Recommendations.tsx  Search.tsx  Sidenotes.tsx  Spacer.tsx  StackedNotes.tsx  TableOfContents.tsx  TagList.tsx  Toolbar.tsx  _FloatingButtons.tsx  _Map.tsx  _MiniButton.tsx  _NotFor.tsx  _RandomPageButton.tsx  _svg.tsx  index.ts  renderPage.tsx  svg.tsx  types.ts
quartz/components/pages/: 404.tsx  Content.tsx  FolderContent.tsx  TagContent.tsx
quartz/components/scripts/: 404.inline.ts  _floatingButtons.inline.ts  _randomPage.inline.ts  callout.inline.ts  clipboard-pseudo.inline.ts  clipboard.inline.ts  collapse-header.inline.ts  comments.inline.ts  content-meta.inline.ts  curius-friends.inline.ts  curius.inline.ts  curius.ts  darkmode.inline.ts  equation.inline.ts  evergreen.inline.ts  graph.inline.ts  (+17 more)
quartz/plugins/: index.ts
quartz/processors/: emit.ts  filter.ts  parse.ts
quartz/scripts/: base.html  convert.ts  format.go  html-md.js  md.js
quartz/static/: FlexokiLight.js  feed.xsl  fonts.css  rss.xsl
quartz/styles/: base.scss  callouts.scss  cursor.scss  custom.scss  mixin.scss  variables.scss
quartz/util/: ctx.ts  helpers.ts  lang.ts  latex.ts  mime.ts  og.tsx  path.ts  perf.ts  resources.tsx  signatures.ts  theme.ts  trace.ts
(+78 files in other folders)
